Alignment Problems Fix

--- a/src/resources/styles/comptext.scss
+++ b/src/resources/styles/comptext.scss
@@ -48,6 +48,10 @@ margin-left: .25em;
   font-weight: bolder;
 }
 
+.alignleft {
+  text-align: left;
+}
+
 .titlebody {
   padding-left: 0.25em;
   padding-right: 0.25em;
